@@ -23,6 +23,7 @@ add_clazy_test(heap-allocated-small-trivial-type)
 add_clazy_test(ifndef-define-typo)
 add_clazy_test(isempty-vs-count)
 add_clazy_test(jni-signatures)
+add_clazy_test(mutex-detaching)
 add_clazy_test(qbytearray-conversion-to-c-style)
 add_clazy_test(qhash-with-char-pointer-key)
 add_clazy_test(qproperty-type-mismatch)
