@@ -778,6 +778,11 @@
             "level": -1,
             "categories": ["readability"],
             "visits_decls": true
+        },
+        {
+            "name": "mutex-detaching",
+            "level": -1,
+            "categories": ["bug"]
         }
     ]
 }
