@@ -210,3 +210,5 @@
   - (...)
 
   - <dont forget changelog entry for used-qunused-variable>
+
+  - <dont forget changelog entry for mutex-detaching>
